# family-pics-ocr

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
family_pics_ocr/: __init__.py  cli.py  errors.py  ocr.py  processor.py
